<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/shipaz_logo" />

        <TextView
            android:id="@+id/shipaz_txt_hotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="2dp"
            android:text="@string/txt_hotline"
            android:textColor="#00af64"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/shipaz_txt_hotline"
            android:layout_toStartOf="@id/shipaz_txt_hotline"
            android:contentDescription="@null"
            android:src="@drawable/shipaz_ic_phone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_gravity="center_horizontal"
        android:background="#00af64" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="1dp"
        android:background="#155d94"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/lbl_enter_info"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/lbl_pricing_table"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_customer_info"
        android:textColor="#05824c"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/shipaz_lbl_username"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_username"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/shipaz_lbl_username"
            android:layout_toRightOf="@id/shipaz_lbl_username"
            android:text="@string/lbl_required_field"
            android:textColor="#f00"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/shipaz_edittext"
            android:hint="@string/hint_enter_phone_number"
            android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionNext"
            android:inputType="text"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/shipaz_lbl_password"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_password"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/shipaz_lbl_password"
            android:layout_toRightOf="@id/shipaz_lbl_password"
            android:text="@string/lbl_required_field"
            android:textColor="#f00"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/shipaz_edittext"
            android:hint="@string/hint_enter_password"
            android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionNext"
            android:inputType="textPassword"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/delivery_note"
        android:textColor="#05824c"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/shipaz_lbl_weight"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_password"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/shipaz_lbl_weight"
            android:layout_toRightOf="@id/shipaz_lbl_weight"
            android:text="@string/lbl_required_field"
            android:textColor="#f00"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/shipaz_edittext"
            android:drawableEnd="@drawable/shipaz_ic_kg"
            android:drawableRight="@drawable/shipaz_ic_kg"
            android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionNext"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/delivery_content"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/shipaz_edittext"
            android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionNext"
            android:inputType="text"
            android:lines="3"
            android:paddingEnd="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingStart="5dp"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/shipaz_lbl_price1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/delivery_fee_1"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/shipaz_lbl_price1"
            android:layout_toRightOf="@id/shipaz_lbl_price1"
            android:text="@string/lbl_required_field"
            android:textColor="#f00"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/shipaz_edittext"
            android:drawableEnd="@drawable/shipaz_ic_vnd"
            android:drawableRight="@drawable/shipaz_ic_vnd"
            android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionNext"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/shipaz_lbl_price2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/delivery_fee_2"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/shipaz_lbl_price2"
            android:layout_toRightOf="@id/shipaz_lbl_price2"
            android:text="@string/lbl_required_field"
            android:textColor="#f00"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/shipaz_edittext"
            android:drawableEnd="@drawable/shipaz_ic_vnd"
            android:drawableRight="@drawable/shipaz_ic_vnd"
            android:imeOptions="flagNoFullscreen|flagNoExtractUi|actionGo"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:background="#00af64"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:text="@string/btn_print_shipping_bill"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:background="#155d94"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:text="@string/btn_create_shipping_bill"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/shipaz_ic_camera" />
    </LinearLayout>

</LinearLayout>